fix: add novus and fix dark mode

--- a/client/css/fridge.css
+++ b/client/css/fridge.css
@@ -9,6 +9,31 @@
   display: none;
 }
 
+html {
+  --default-font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
+    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  --block-bg-color: var(--tg-theme-bg-color);
+  --bg-color: var(--tg-theme-secondary-bg-color, #ebedf0);
+  --animation: 0.15s ease;
+  --status-height: 48px;
+  --accent-color: #31b545;
+  --error-color: #e64d44;
+  --main-color: #f8a917;
+  --text-color: #222;
+  --page-hint-color: #83878a;
+  --hint-color: #74787a;
+  --placeholder-color: #999da1;
+
+  &.dark {
+    --block-bg-color: var(--tg-theme-bg-color);
+    --bg-color: var(--tg-theme-secondary-bg-color, #0f0f0f);
+    --text-color: #fff;
+    --page-hint-color: #9b9ba1;
+    --hint-color: #64666d;
+    --placeholder-color: #5d6163;
+  }
+}
+
 html,
 body {
   user-select: none;
@@ -37,34 +62,9 @@ body {
   padding: 0;
   margin: 0;
 
-  --default-font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
-    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-  --block-bg-color: var(--tg-theme-bg-color);
-  --bg-color: var(--tg-theme-secondary-bg-color, #ebedf0);
-  --animation: 0.15s ease;
-  --status-height: 48px;
-  --accent-color: #31b545;
-  --error-color: #e64d44;
-  --main-color: #f8a917;
-  --text-color: #222;
-  --page-hint-color: #83878a;
-  --hint-color: #74787a;
-  --placeholder-color: #999da1;
-
   &.closed section {
     filter: grayscale(1) opacity(0.7);
   }
-}
-
-body.dark {
-  background-image: url('/img/bg-dark.webp');
-
-  --block-bg-color: var(--tg-theme-bg-color);
-  --bg-color: var(--tg-theme-secondary-bg-color, #0f0f0f);
-  --text-color: #fff;
-  --page-hint-color: #9b9ba1;
-  --hint-color: #64666d;
-  --placeholder-color: #5d6163;
 }
 
 p {
@@ -251,6 +251,7 @@ section.products {
     & div.label {
       display: flex;
       justify-content: center;
+      color: var(--text-color);
 
       span.price {
         font-weight: 700;
@@ -385,6 +386,7 @@ section.order {
   flex-direction: column;
 
   & textarea {
+    background-color: var(--block-bg-color);
     font-size: 16px;
     padding: 5px 20px;
     box-sizing: border-box;
